# ChangeLog for dev-python/pyrtf
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyrtf/ChangeLog,v 1.4 2007/02/22 00:42:59 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  02 May 2006; Scott Stoddard <deltacow@gentoo.org> pyrtf-0.45.ebuild:
  Added ~amd64 (bug #132033)

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> pyrtf-0.45.ebuild:
  Mark 0.45 ~ia64

*pyrtf-0.45 (19 Jun 2005)

  19 Jun 2005; Fernando Serboncini <fserb@gentoo.org> +metadata.xml,
  +pyrtf-0.45.ebuild:
  Initial import, ebuild by Ali Sabil <hybrid@tuxfamily.org> in bug #86755
