@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST PyRTF-0.45.tar.gz 32837 RMD160 7a9432e4e3c9d8543821e7d3a92ae4f44b971fe9 SHA1 dd7fb3fb4e937999d6216d5ceefbe66ec22d679a SHA256 7c0b7c35688041978786e959fd83dbdffee66ded9d40e1ad0441c460164a349e
-EBUILD pyrtf-0.45.ebuild 575 RMD160 6b754a9e4bc7984fa08d6d6fa86913a076f33c51 SHA1 89dc148a0a2a9d855d1c0a91674012a62a372fb9 SHA256 332afa7b0262f8cd58c952bfed1d25c56df5f745a607c9033bc996124e057595
-MISC ChangeLog 679 RMD160 baa3d29d9520506d839573f1d43b3f73d6eb1b8e SHA1 dd7695b1bbd622794bea1ccf6ccc6df0b95fb2d2 SHA256 284ab514ff2949ed403b7c61b61c0ed69c44a0f0fe2cde54f58b0f6ef8e29a11
+EBUILD pyrtf-0.45.ebuild 570 RMD160 8c2d2e036d4d42e587a146ec49f0db1ccb75d2d0 SHA1 c45b4285407aeff4e6ef7945ed03441798cc5f37 SHA256 e25df95069fc22cb45ed30bebca6f5ad418752c78613296b73583c885f64de41
+MISC ChangeLog 780 RMD160 6b30a2a97e0cc51de4ad1ab8e852685eb9e3e8ba SHA1 d9c7adbfdbe42849bc1dcb4a36714c75856dd42f SHA256 4cf9e8d1082b664320feb540ccce49ee74861c3dbef7c4cdb4c027b64d7d6ddd
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAks5ILUACgkQkKaRLQcq0GIvgQCfcoKgzVEBTBGQpgxNyvTCtinK
+pAkAoLPUx/4XJmf0Cpd8C+6UrIYWFaoI
+=Tv5g
+-----END PGP SIGNATURE-----
