@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyrtf/pyrtf-0.45.ebuild,v 1.4 2007/07/11 06:19:48 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyrtf/pyrtf-0.45.ebuild,v 1.5 2009/12/28 21:19:04 maekke Exp $
 
 inherit distutils
 
@@ -12,7 +12,7 @@ documents from python programs."
 SRC_URI="mirror://sourceforge/$PN/${MY_P}.tar.gz"
 HOMEPAGE="http://pyrtf.sourceforge.net"
 
-KEYWORDS="~amd64 ~ia64 ~ppc ~x86"
+KEYWORDS="amd64 ~ia64 ~ppc x86"
 SLOT="0"
 LICENSE="|| ( GPL-2 LGPL-2 )"
 IUSE=""
